2009-07-14  Kenichi Handa  <handa@m17n.org>

	* international/characters.el: Fix setting of category ?C.

2009-07-13  Jan Djärv  <jan.h.d@swipnet.se>

	* term/ns-win.el (x-select-font): defailias x-select-font to
	ns-popup-font-panel instead of generate-fontset-menu.

2009-07-12  Eli Zaretskii  <eliz@gnu.org>

	* desktop.el (desktop-buffers-not-to-save): Remove ".log". (Bug#3833)

2009-07-12  Peter Jolly  <peter@jollys.org>  (tiny change)

	* arc-mode.el (archive-find-type): Allow for a PK00 string before
	the PK\003\004 header (Bug#3770).

2009-07-12  Guanpeng Xu  <herberteuler@hotmail.com>

	* pcomplete.el (pcomplete-comint-setup): Check for
	shell-dynamic-complete-filename too.

2009-07-11  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (temporary-goal-column): Change the value for
	line-move-visual to a cons cell.
	(line-move-visual): Record or set the window hscroll, if
	necessary (Bug#3494).
	(line-move-1): Handle cons value of temporary-goal-column.

2009-07-11  Kenichi Handa  <handa@m17n.org>

	* international/mule-diag.el (describe-character-set): Don't show
	width.

2009-07-10  Sam Steingold  <sds@gnu.org>

	* progmodes/compile.el (compilation-mode-font-lock-keywords):
	Omake sometimes indents the errors it prints, so allow all
	regexps to start with spaces.

2009-07-10  Eli Zaretskii  <eliz@gnu.org>

	* cus-edit.el (customize-changed-options-previous-release): Bump
	value to 22.1.  (Bug#3804)

2009-07-08  Sam Steingold  <sds@gnu.org>

	* progmodes/grep.el (rgrep): Allow grep-find-ignored-directories
	to be a cons cell (test . ignored-directory) to selectively ignore
	some directories depending on the location of the search.

2009-07-08  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-set-file-uid-gid): Handle the case the
	remote user is root, on the local host.
	(tramp-local-host-p): Either the local user or the remote user
	must be root.  (Bug#3771)

2009-07-08  Nick Roberts  <nickrob@snap.net.nz>
